--- a/style.css
+++ b/style.css
@@ -1,4 +1,34 @@
-.autocomplete {
-    position: relative;
-    display: inline-block;
+body {
+    background-color: rgb(45, 45, 45);
+}
+img {
+    max-width: 120px;
+    max-height: 120px;
+}
+p {
+    color: rgb(250,250,250);
+}
+h3 {
+    color: rgb(230,230,230);
+}
+.good {
+    font-weight:bold;
+}
+.role {
+    color:aliceblue;
+}
+.display-6 {
+    color:rgb(230, 230, 230);
+    margin-bottom:50px;
+}
+.role {
+    margin-bottom:0px;
+}
+.box {
+    border: 2px solid rgb(165, 165, 165);
+    border-radius: 5px;
+    padding: 10px;
+    background-color:rgb(92, 92, 92);
+    display:flex;
+    flex-direction:row;
 }
