massive code optimizations

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     background-color: rgb(60, 60, 60);
 }
-img {
+.img-fluid {
     max-width: 120px;
     max-height: 120px;
 }
@@ -22,11 +22,16 @@ h3 {
     color:rgb(230, 230, 230);
     margin-bottom:0px;
 }
+.page_header {
+    background-color:rgb(45,45,45);
+    margin-bottom: 10px;
+}
 .display-3 {
     /*color:rgb(230, 230, 230);*/
     animation: rgb 5s linear 0s infinite;
     margin: 10px 0px 30px 0px;
     font-style: italic;
+    font-weight: bold;
 }
 @keyframes rgb {
     0% {color:red;}
@@ -59,4 +64,8 @@ h3 {
 .col {
     align-items: middle;
     display: flex;
+}
+.chart_img {
+    object-fit:cover;
+    max-width: 100%;
 }
