--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
+::-webkit-scrollbar {
+    width: 10px;
+}
+::-webkit-scrollbar-track {
+    background: rgb(165, 165, 165);
+}
+::-webkit-scrollbar-thumb {
+    background: rgb(60, 60, 60);
+}
+::-webkit-scrollbar-thumb:hover {
+    background: rgb(45,45,45);
+}
 body {
     background-color: rgb(60, 60, 60);
 }
@@ -11,8 +23,7 @@ p {
 h3 {
     color: rgb(230,230,230);
 }
-.container {
-    background-color: rgb(45, 45, 45);
+.container-fluid {
     min-height: 937px;
 }
 .good {
@@ -24,12 +35,10 @@ h3 {
 }
 .page_header {
     background-color:rgb(45,45,45);
-    margin-bottom: 10px;
 }
 .display-3 {
     /*color:rgb(230, 230, 230);*/
     animation: rgb 5s linear 0s infinite;
-    margin: 10px 0px 30px 0px;
     font-style: italic;
     font-weight: bold;
 }
@@ -68,4 +77,23 @@ h3 {
 .chart_img {
     object-fit:cover;
     max-width: 100%;
+}
+.right_panel {
+    background-color: rgb(30,30,30);
+    min-height: 937px;
+    padding-top:10px;
+}
+.left_panel {
+    padding-top:10px;
+}
+.bi {
+    color:rgb(185, 185, 185);
+}
+.header_link {
+    color: rgb(185, 185, 185);
+    transition: color 0.5s;
+}
+.header_link:hover {
+    color: rgb(255,255,255);
+    text-decoration: none;
 }
