--- a/style.css
+++ b/style.css
@@ -97,3 +97,7 @@ h3 {
     color: rgb(255,255,255);
     text-decoration: none;
 }
+.list-group-item {
+    background-color: rgb(45,45,45);
+    color:rgb(185, 185, 185);
+}
